--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel": "^6.3.26",
     "babel-loader": "^7.1.1",
+    "babel-preset-airbnb": "^1.0.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.4.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.18.1",
     "chai": "^3.5.0",
